# bwm

./: .editorconfig  .gitattributes  .gitignore  LICENSE.md  README.md  bwm.desktop  meson.build
bmsg/: bmsg.c
examples/: README.md  bwmhkrc  bwmrc
include/: blur.h  config.h  cursor.h  gesture.h  idle.h  input.h  input_method.h  ipc.h  keyboard.h  layer.h  lock.h  log.h  output.h  output_config.h  popup.h  rule.h  scroller.h  server.h  tabs.h  text.h  toplevel.h  transaction.h  tree.h  types.h  workspace.h  xwayland.h
src/: blur.c  config.c  cursor.c  gesture.c  idle.c  input.c  input_method.c  ipc.c  keyboard.c  layer.c  lock.c  log.c  main.c  output.c  output_config.c  popup.c  rule.c  scroller.c  server.c  tabs.c  tearing.c  text.c  toplevel.c  transaction.c  tree.c  workspace.c  xwayland.c
src/shaders/: blit.frag  blur_box_h.frag  blur_box_v.frag  blur_gauss_h.frag  blur_gauss_v.frag  blur_kawase.frag  blur_refraction.frag  border.frag  border_corner_mask.frag  color_helpers.glsl  effect_tex.vert  embed.pl  ext_blit.frag  invert.frag  meson.build
